// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render UserListItem 1`] = `
<div>
  <label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    Robert
  </label>
</div>
`;

exports[`render should render UserListItem for alt user 1`] = `
<div>
  <label>
    <input
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    Peter
  </label>
</div>
`;
